fix: changed some images & texts

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta property="og:title" content="Portfólio do Yago" />
     <meta property="og:description" content="Coisas do Yago em relação a trabalho" />
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/437441552055271424/846840557867499570/unknown.png" />
-    <meta property="og:url" content="https://yago.codes/" />
     <title>Yago Costa Ayala</title>
     <link rel="shortcut icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="style.css">
@@ -24,7 +23,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Yago<span> Ayala</span></a></div>
+            <div class="logo"><a href="#">Bella<span> Estética</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">Sobre</a></li>
@@ -42,24 +41,25 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Olá! Me chamo</div>
-                <div class="text-2">Yago Ayala</div>
-                <div class="text-3">e sou um <span class="typing"></span></div>
+                <div class="text-1">Bem-vindo! Somos a</div>
+                <div class="text-2">Bella Estética</div>
+                <div class="text-3">e somos <span class="typing"></span></div>
             </div>
         </div>
     </section>
 
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">Sobre mim</h2>
+            <h2 class="title">Nossa Missão</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/yago.jpg" alt="">
+                    <img src="images/yago.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">Meu nome completo é Yago Cristiano Costa Ayala e eu sou um <span class="typing-2"></span></div>
-                    <p>Atualmente tenho 19 anos, estou cursando Engenharia de Software na Católica de Santa Catarina. Desde sempre gostei de mexer em computadores, no final do ano de 2020 conheci a programação e já apaixonei logo de cara, e estou publicando todos os meus projetos no GitHub.</p>
-                    <a href="https://drive.google.com/file/d/1cXpA8KLfw_WkvTFq1bgbdkCa2XzfheYj/view?usp=sharing">Visualizar CV</a>
+                    <div class="text">Somos a Bella Estética e a nossa missão é: <span class="typing-2"></span></div>
+                    <p>Promover eficiência em todos os procedimentos de beleza e bem estar.
+                        impactar e agregar valor com eficiência em toda a cadeia de clínicas de saúde, beleza e bem estar.
+                        </p>
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
 
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">O que eu faço?!</h2>
+            <h2 class="title">O que fazemos?!</h2>
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
@@ -153,7 +153,7 @@
 
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">Onde já trabalhei?</h2>
+            <h2 class="title">Quem são nossos profissionais?</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
@@ -199,7 +199,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">yago.ayala@outlook.com</div>
+                                <div class="sub-title">bella.estetica@gmail.com</div>
                             </div>
                         </div>
                         <div class="row">
