--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">Sobre</a></li>
                 <li><a href="#services" class="menu-btn">Serviços</a></li>
-                <li><a href="#skills" class="menu-btn">Habilidades</a></li>
+                <li><a href="#skills" class="menu-btn">Equipe</a></li>
                 <li><a href="#teams" class="menu-btn">Experiências</a></li>
                 <li><a href="#contact" class="menu-btn">Contato</a></li>
             </ul>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
+                        <i class="fa-light fa-user-hair"></i>
                         <div class="text">Full-Stack</div>
                         <p>Produzo o design do site e também a lógica por trás dos panos, usando tecnologia de ponta.</p>
                     </div>
