--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="Portfólio do Yago" />
     <meta property="og:description" content="Coisas do Yago em relação a trabalho" />
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/437441552055271424/846840557867499570/unknown.png" />
-    <title>Yago Costa Ayala</title>
+    <title>La Belle</title>
     <link rel="shortcut icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -23,7 +23,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Bella<span> Estética</span></a></div>
+            <div class="logo"><a href="#">La<span> Belle</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">Sobre</a></li>
@@ -42,7 +42,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Bem-vindo! Somos a</div>
-                <div class="text-2">Bella Estética</div>
+                <div class="text-2">La Belle</div>
                 <div class="text-3">e somos <span class="typing"></span></div>
             </div>
         </div>
@@ -56,7 +56,7 @@
                     <img src="images/yago.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">Somos a Bella Estética e a nossa missão é: <span class="typing-2"></span></div>
+                    <div class="text">Somos a La Belle e a nossa missão é: <span class="typing-2"></span></div>
                     <p>Promover eficiência em todos os procedimentos de beleza e bem estar.
                         impactar e agregar valor com eficiência em toda a cadeia de clínicas de saúde, beleza e bem estar.
                         </p>
