--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">bella.estetica@gmail.com</div>
+                                <div class="sub-title">Labella@gmail.com</div>
                             </div>
                         </div>
                         <div class="row">
