--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta property="og:title" content="Portfólio do Yago" />
@@ -8,15 +9,16 @@
     <title>La Belle</title>
     <link rel="shortcut icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
+
 <body>
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
@@ -56,10 +58,10 @@
                     <img src="images/yago.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">Somos a La Belle e a nossa missão é: <span class="typing-2"></span></div>
-                    <p>Promover eficiência em todos os procedimentos de beleza e bem estar.
+                    <div class="text">Somos a La Belle <span class="typing-2"></span></div>
+                    <p>Nossa missão é promover eficiência em todos os procedimentos de beleza e bem estar.
                         impactar e agregar valor com eficiência em toda a cadeia de clínicas de saúde, beleza e bem estar.
-                        </p>
+                    </p>
                 </div>
             </div>
         </div>
@@ -68,36 +70,49 @@
     <section class="services" id="services">
         <div class="max-width">
             <h2 class="title">O que fazemos?!</h2>
-            <div class="serv-content">
+            <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Front-End</div>
-                        <p>Desenvolvo sites com os frameworks de primeira linha, como por exemplo: Vue.js</p>
+                        <img src="images/devhero.jpeg">
+                        <div class="text">Preenchimento Labial </div>
+                        <p>Em branco ainda</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Back-End</div>
-                        <p>Construo servidores que consigam se comunicar com o site usando Node.js e C# </p>
+                        <img src="images/multiplier.jpg">
+                        <div class="text">Botox</div>
+                        <p>Em branco ainda</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fa-light fa-user-hair"></i>
-                        <div class="text">Full-Stack</div>
-                        <p>Produzo o design do site e também a lógica por trás dos panos, usando tecnologia de ponta.</p>
+                        <img src="images/upflux.jpg">
+                        <div class="text">Peeling</div>
+                        <p>Em branco ainda</p>
                     </div>
                 </div>
-               </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/upflux.jpg">
+                        <div class="text">Harmonização facial</div>
+                        <p>Em branco ainda</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/upflux.jpg">
+                        <div class="text">Massagem modeladora</div>
+                        <p>Em branco ainda</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
     <section class="skills" id="skills">
         <div class="max-width">
-            <h2 class="title">Minhas Habilidades</h2>
+            <h2 class="title">Nosso Fluxograma</h2>
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">Conhecimentos:</div>
@@ -158,14 +173,14 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/devhero.jpeg">
-                        <div class="text">DevHero</div>
-                        <p>Trabalhei na DevHero, por 5 meses. Produzi sites para os consumidores, na parte do Front-End usei Vue.js, JavaScript, CSS, SASS, HTML. Também consumi várias APIs para dar novas funcionalidades para os sites, na parte do Back-End tive muito contato com REST, Node.js, express, MongoDB..</p>
+                        <div class="text">Eliabe</div>
+                        <p>É o nosso terapeuta tem como papel cuidar da prevenção, diagnóstico e tratamento de diversos problemas ligados às funções e aos movimentos do corpo.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/multiplier.jpg">
-                        <div class="text">Multiplier</div>
+                        <div class="text">Pamela</div>
                         <p>Fiquei na Multiplier, por 5 meses. Refatorei as validações e os controllers e criei um Back-end usando TypeScript, Teste Unitário,
                             GraphQL e Decorator. Usando os princípios do SOLID e
                             do TDD.</p>
@@ -174,8 +189,8 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/upflux.jpg">
-                        <div class="text">Upflux</div>
-                        <p>Atualmente estou trabalhando no Back-End usando C#, também dou suporte na área de DevOps realizando tarefa que envolvem automatização de processos.</p>
+                        <div class="text">Yago</div>
+                        <p>É o secretário da clínica, ele organiza o ambiente de trabalho, arquiva documentos, redige cartas, ofícios e comunicados. Participa de reuniões, palestras e conferências para registrar o que foi discutido e acordado. É responsável pelo primeiro atendimento dos clientes, presta informações e atende o telefone. </p>
                     </div>
                 </div>
             </div>
@@ -204,23 +219,23 @@
                         </div>
                         <div class="row">
                             <div class="info">
-                                    <div class="social-buttons">
+                                <div class="social-buttons">
                                     <a href="https://www.linkedin.com/in/yagoca/" class="social-buttons__button social-button social-button--linkedin" aria-label="LinkedIn">
                                         <span class="social-button__inner">
-                                         <i class="fab fa-linkedin-in"></i>
+                                            <i class="fab fa-linkedin-in"></i>
                                         </span>
-                                      </a>
+                                    </a>
                                     <a href="https://github.com/YagoAyala" class="social-buttons__button social-button social-button--github" aria-label="GitHub">
                                         <span class="social-button__inner">
-                                         <i class="fab fa-github"></i>
+                                            <i class="fab fa-whatsapp"></i>
                                         </span>
-                                      </a>
-                                      <a href="https://www.instagram.com/yago._.costa/" class="social-buttons__button social-button social-button--facebook" aria-label="Facebook">
+                                    </a>
+                                    <a href="https://www.instagram.com/yago._.costa/" class="social-buttons__button social-button social-button--facebook" aria-label="Facebook">
                                         <span class="social-button__inner">
-                                         <i class="fab fa-instagram"></i>
+                                            <i class="fab fa-instagram"></i>
                                         </span>
-                                      </a>
-                                    </div>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -253,4 +268,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
