feat: added services

--- a/index.html
+++ b/index.html
@@ -73,37 +73,44 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/devhero.jpeg">
-                        <div class="text">Preenchimento Labial </div>
-                        <p>Em branco ainda</p>
+                        <img src="images/drenagem_linfatica.jpg">
+                        <div class="text">Drenagem Linfática</div>
+                        <p>A Drenagem Linfática é uma técnica que utiliza a massagem manual para estimular o funcionamento do sistema linfático. Essa técnica de massagem faz com que toxinas e líquidos acumulados em excesso nos tecidos corporais sejam eliminados. Isso é importante porque são eles que causam o agravamento do inchaço e das celulites. Ela deve ser realizada com diversos movimentos circulares, bastante precisos e bem suaves. A massagem pode e deve ser associada a outros procedimentos estéticos e acompanhada de mudanças de hábitos de alimentação.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/multiplier.jpg">
-                        <div class="text">Botox</div>
-                        <p>Em branco ainda</p>
+                        <img src="images/botox.jpg">
+                        <div class="text">Toxina Botulínica</div>
+                        <p>A Toxina Botulínica, popularmente conhecida como Botox® ,possui propriedades que ajudam a inibir a contração dos músculos e, desta forma, reduzir as linhas de expressão mais incômodas. Ela é considerada uma substância consagrada para o tratamento de rugas de expressão pela sua eficácia e segurança estabelecidas. Ela é indicada tanto para rítides faciais, como no pescoço. </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/upflux.jpg">
-                        <div class="text">Peeling</div>
-                        <p>Em branco ainda</p>
+                        <img src="images/peeling.jpg">
+                        <div class="text">Peeling de Diamante</div>
+                        <p>O peeling de diamante é um peeling físico, ou seja, utiliza um equipamento próprio para esse fim para promover uma microesfoliação da pele. Entre os principais objetivos do procedimento estão a remoção das células mortas que ficam na camada mais superficial da pele e a estimulação à produção de colágeno.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/upflux.jpg">
-                        <div class="text">Harmonização facial</div>
-                        <p>Em branco ainda</p>
+                        <img src="images/laser.png">
+                        <div class="text">Laser Fracionado Abrasivo</div>
+                        <p>O Laser Fracionado Abrasivo é indicado para casos de envelhecimento mais severo da pele. Também é usado para tratar imperfeições da pele, como cicatrizes de acne, rugas, flacidez cutânea, estrias, e também para um resurfacing, ou seja, um esticamento da pele, principalmente no pescoço, pálpebras e em torno da boca.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/upflux.jpg">
-                        <div class="text">Massagem modeladora</div>
-                        <p>Em branco ainda</p>
+                        <img src="images/massagem_modeladora.jpg">
+                        <div class="text">Massagem Modeladora</div>
+                        <p>A massagem modeladora é uma massagem feita com movimentos mais fortes e profundos, com o intuito de atingir as camadas mais profundas da pele. As suas principais finalidades são ativar o metabolismo local, aumentar a circulação sanguínea e estimular respostas neuromusculares, o que dá a sensação de corpo mais rígido logo após o procedimento. Esse efeito também ajuda a reduzir a celulite no local.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/black_peel.jpg">
+                        <div class="text">Black Peel</div>
+                        <p>O Back Peel é a combinação de carvão ativado e laser. A máscara é um tipo especial de carvão. Esse processo mantém a porosidade destes materiais que são capazes de coletar seletivamente gases, líquidos ou impurezas tóxicas no interior de seus poros.</p>
                     </div>
                 </div>
             </div>
