feat: new doctor

--- a/index.html
+++ b/index.html
@@ -180,23 +180,21 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/devhero.jpeg">
-                        <div class="text">Eliabe</div>
-                        <p>É o nosso terapeuta tem como papel cuidar da prevenção, diagnóstico e tratamento de diversos problemas ligados às funções e aos movimentos do corpo.</p>
+                        <div class="text">Dr. Eliabe Gai</div>
+                        <p>Formado na USFC (Universidade Federal de Santa Catarina), possui a especialização em Dermatologia. Utilizando as melhores tecnologias em aparelhos dermatológicos, estéticos, faciais e corporais visando sempre o aperfeiçoamento para melhor atendimento.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/multiplier.jpg">
-                        <div class="text">Pamela</div>
-                        <p>Fiquei na Multiplier, por 5 meses. Refatorei as validações e os controllers e criei um Back-end usando TypeScript, Teste Unitário,
-                            GraphQL e Decorator. Usando os princípios do SOLID e
-                            do TDD.</p>
+                        <div class="text">Dra. Gideane Borges Gai</div>
+                        <p>É a nossa Fisioterapeuta,Formada em 2020/2, pós graduada em Ortopedia, Traumatologia e Esportiva pela Faculdade Inspirar e, formada em pilates solo e aparelhos, cursos focados em pilates, quiropraxia e massoterapia</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/upflux.jpg">
-                        <div class="text">Yago</div>
+                        <div class="text">Yago Costa Ayala</div>
                         <p>É o secretário da clínica, ele organiza o ambiente de trabalho, arquiva documentos, redige cartas, ofícios e comunicados. Participa de reuniões, palestras e conferências para registrar o que foi discutido e acordado. É responsável pelo primeiro atendimento dos clientes, presta informações e atende o telefone. </p>
                     </div>
                 </div>
