feat: some words

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                     <div class="text">Somos a La Belle <span class="typing-2"></span></div>
                     <p>Nossa missão é promover eficiência em todos os procedimentos de beleza e bem estar.
                     </p>
+                    <a href="https://medium.com/@yago.ayala2002">Visualizar Nossos Artigos</a>
                 </div>
             </div>
         </div>
