--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">La<span> Belle</span></a></div>
+            <div class="logo"><a href="#">La<span style="color: black"> Belle</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">Sobre</a></li>
@@ -45,20 +45,20 @@
             <div class="home-content">
                 <div class="text-1">Bem-vindo! Somos a</div>
                 <div class="text-2">La Belle</div>
-                <div class="text-3">e somos <span class="typing"></span></div>
+                <div class="text-3"><span class="typing" style="color: black"></span></div>
             </div>
         </div>
     </section>
 
-    <section class="about" id="about">
+    <section class="about" id="about" style="background-color: #f8f9f0;">
         <div class="max-width">
             <h2 class="title">Nossa Missão</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/yago.png" alt="">
+                    <img src="images/Clínica de Estetica logo.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">Somos a La Belle <span class="typing-2"></span></div>
+                    <div class="text">Somos a La Belle <span class="typing-2" style="color: #53664f;"></span></div>
                     <p>Nossa missão é promover eficiência em todos os procedimentos de beleza e bem estar.
                     </p>
                     <a href="https://medium.com/@yago.ayala2002">Visualizar Nossos Artigos</a>
@@ -67,50 +67,50 @@
         </div>
     </section>
 
-    <section class="services" id="services">
+    <section class="services" id="services" style="background-color: #d3b094;">
         <div class="max-width">
             <h2 class="title">O que fazemos?!</h2>
             <div class="carousel owl-carousel">
-                <div class="card">
+                <div class="card" style="background-color: #f8f9f0;">
                     <div class="box">
                         <img src="images/drenagem_linfatica.jpg">
-                        <div class="text">Drenagem Linfática</div>
-                        <p>A Drenagem Linfática é uma técnica que utiliza a massagem manual para estimular o funcionamento do sistema linfático. Essa técnica de massagem faz com que toxinas e líquidos acumulados em excesso nos tecidos corporais sejam eliminados. Isso é importante porque são eles que causam o agravamento do inchaço e das celulites. Ela deve ser realizada com diversos movimentos circulares, bastante precisos e bem suaves. A massagem pode e deve ser associada a outros procedimentos estéticos e acompanhada de mudanças de hábitos de alimentação.</p>
+                        <div class="text" style="color: black;">Drenagem Linfática</div>
+                        <p style="color: black">A Drenagem Linfática é uma técnica que utiliza a massagem manual para estimular o funcionamento do sistema linfático. Essa técnica de massagem faz com que toxinas e líquidos acumulados em excesso nos tecidos corporais sejam eliminados. Isso é importante porque são eles que causam o agravamento do inchaço e das celulites. Ela deve ser realizada com diversos movimentos circulares, bastante precisos e bem suaves. A massagem pode e deve ser associada a outros procedimentos estéticos e acompanhada de mudanças de hábitos de alimentação.</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" style="background-color: #f8f9f0;">
                     <div class="box">
                         <img src="images/botox.jpg">
-                        <div class="text">Toxina Botulínica</div>
-                        <p>A Toxina Botulínica, popularmente conhecida como Botox® ,possui propriedades que ajudam a inibir a contração dos músculos e, desta forma, reduzir as linhas de expressão mais incômodas. Ela é considerada uma substância consagrada para o tratamento de rugas de expressão pela sua eficácia e segurança estabelecidas. Ela é indicada tanto para rítides faciais, como no pescoço. </p>
+                        <div class="text" style="color: black;">Toxina Botulínica</div>
+                        <p style="color: black;">A Toxina Botulínica, popularmente conhecida como Botox® ,possui propriedades que ajudam a inibir a contração dos músculos e, desta forma, reduzir as linhas de expressão mais incômodas. Ela é considerada uma substância consagrada para o tratamento de rugas de expressão pela sua eficácia e segurança estabelecidas. Ela é indicada tanto para rítides faciais, como no pescoço. </p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" style="background-color: #f8f9f0;">
                     <div class="box">
                         <img src="images/peeling.jpg">
-                        <div class="text">Peeling de Diamante</div>
-                        <p>O peeling de diamante é um peeling físico, ou seja, utiliza um equipamento próprio para esse fim para promover uma microesfoliação da pele. Entre os principais objetivos do procedimento estão a remoção das células mortas que ficam na camada mais superficial da pele e a estimulação à produção de colágeno.</p>
+                        <div class="text" style="color: black;">Peeling de Diamante</div>
+                        <p style="color: black;">O peeling de diamante é um peeling físico, ou seja, utiliza um equipamento próprio para esse fim para promover uma microesfoliação da pele. Entre os principais objetivos do procedimento estão a remoção das células mortas que ficam na camada mais superficial da pele e a estimulação à produção de colágeno.</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" style="background-color: #f8f9f0;">
                     <div class="box">
                         <img src="images/laser.png">
-                        <div class="text">Laser Fracionado Abrasivo</div>
-                        <p>O Laser Fracionado Abrasivo é indicado para casos de envelhecimento mais severo da pele. Também é usado para tratar imperfeições da pele, como cicatrizes de acne, rugas, flacidez cutânea, estrias, e também para um resurfacing, ou seja, um esticamento da pele, principalmente no pescoço, pálpebras e em torno da boca.</p>
+                        <div class="text" style="color: black;">Laser Fracionado Abrasivo</div>
+                        <p style="color: black;">O Laser Fracionado Abrasivo é indicado para casos de envelhecimento mais severo da pele. Também é usado para tratar imperfeições da pele, como cicatrizes de acne, rugas, flacidez cutânea, estrias, e também para um resurfacing, ou seja, um esticamento da pele, principalmente no pescoço, pálpebras e em torno da boca.</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" style="background-color: #f8f9f0;">
                     <div class="box">
                         <img src="images/massagem_modeladora.jpg">
-                        <div class="text">Massagem Modeladora</div>
-                        <p>A massagem modeladora é uma massagem feita com movimentos mais fortes e profundos, com o intuito de atingir as camadas mais profundas da pele. As suas principais finalidades são ativar o metabolismo local, aumentar a circulação sanguínea e estimular respostas neuromusculares, o que dá a sensação de corpo mais rígido logo após o procedimento. Esse efeito também ajuda a reduzir a celulite no local.</p>
+                        <div class="text" style="color: black;">Massagem Modeladora</div>
+                        <p style="color: black;">A massagem modeladora é uma massagem feita com movimentos mais fortes e profundos, com o intuito de atingir as camadas mais profundas da pele. As suas principais finalidades são ativar o metabolismo local, aumentar a circulação sanguínea e estimular respostas neuromusculares, o que dá a sensação de corpo mais rígido logo após o procedimento. Esse efeito também ajuda a reduzir a celulite no local.</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" style="background-color: #f8f9f0;">
                     <div class="box">
                         <img src="images/black_peel.jpg">
                         <div class="text">Black Peel</div>
-                        <p>O Back Peel é a combinação de carvão ativado e laser. A máscara é um tipo especial de carvão. Esse processo mantém a porosidade destes materiais que são capazes de coletar seletivamente gases, líquidos ou impurezas tóxicas no interior de seus poros.</p>
+                        <p style="color: black;">O Back Peel é a combinação de carvão ativado e laser. A máscara é um tipo especial de carvão. Esse processo mantém a porosidade destes materiais que são capazes de coletar seletivamente gases, líquidos ou impurezas tóxicas no interior de seus poros.</p>
                     </div>
                 </div>
             </div>
@@ -121,54 +121,9 @@
         <div class="max-width">
             <h2 class="title">Nosso Fluxograma</h2>
             <div class="skills-content">
-                <div class="column left">
-                    <div class="text">Conhecimentos:</div>
-                    <p>Node.js, Express.js, JavaScript, TypeScript, Decorator, Vue.js, HTML, CSS, SASS, AWS, MongoDB, Git, GraphQL, REST, SOLID, TDD, AWS, GraphQL e MySQL. Me encontro estudando mais sobre C#, MongoDB, NoSQL, TypeScript e estruturas de arquivos.</p>
+                <img src="images/fluxograma.png">
                 </div>
-                <div class="column right">
-                    <div class="bars">
-                        <div class="info">
-                            <span>Node.js</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="line html"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>AWS</span>
-                            <span>50%</span>
-                        </div>
-                        <div class="line css"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>JavaScript</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="line js"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>MongoDB</span>
-                            <span>60%</span>
-                        </div>
-                        <div class="line php"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>MySQL</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="line yago"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>C#</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line mysql"></div>
-                    </div>
-                </div>
+              </div>
             </div>
         </div>
     </section>
@@ -177,23 +132,30 @@
         <div class="max-width">
             <h2 class="title">Quem são nossos profissionais?</h2>
             <div class="carousel owl-carousel">
-                <div class="card">
+                <div class="card" >
                     <div class="box">
-                        <img src="images/devhero.jpeg">
+                        <img src="images/eliabe.jpg">
                         <div class="text">Dr. Eliabe Gai</div>
                         <p>Formado na USFC (Universidade Federal de Santa Catarina), possui a especialização em Dermatologia. Utilizando as melhores tecnologias em aparelhos dermatológicos, estéticos, faciais e corporais visando sempre o aperfeiçoamento para melhor atendimento.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/multiplier.jpg">
+                        <img src="images/gideane.jpg">
                         <div class="text">Dra. Gideane Borges Gai</div>
                         <p>É a nossa Fisioterapeuta,Formada em 2020/2, pós graduada em Ortopedia, Traumatologia e Esportiva pela Faculdade Inspirar e, formada em pilates solo e aparelhos, cursos focados em pilates, quiropraxia e massoterapia</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/upflux.jpg">
+                        <img src="images/pamela.jfif">
+                        <div class="text">Pamela Menezes Pereira</div>
+                        <p>É a nossa Esteticista,Formada na UVV (Universidade de Vila Velha), capacitada para fazer avaliações e também para realizar as intervenções mais indicadas, desde limpeza de pele, drenagem linfática, depilação e massagem, até métodos avançados para suavizar linhas de expressão, promover hidratação, combater a queda de cabelos e reduzir estrias e celulites.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/yago.jpg">
                         <div class="text">Yago Costa Ayala</div>
                         <p>É o secretário da clínica, ele organiza o ambiente de trabalho, arquiva documentos, redige cartas, ofícios e comunicados. Participa de reuniões, palestras e conferências para registrar o que foi discutido e acordado. É responsável pelo primeiro atendimento dos clientes, presta informações e atende o telefone. </p>
                     </div>
