--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Somos a La Belle <span class="typing-2" style="color: #53664f;"></span></div>
-                    <p>Nossa missão é promover eficiência em todos os procedimentos de beleza e bem estar.
+                    <p>Quem é que não gosta de ter um dia para cuidar do corpo e da beleza? Mesmo com o dia a dia atarefado, sempre é preciso guardar um espaço na agenda para se dedicar a si mesmo. Nossa missão é oferecer eficiência em toda a cadeia de clínicas de saúde, beleza e bem estar.
                     </p>
                     <a href="https://medium.com/@yago.ayala2002">Visualizar Nossos Artigos</a>
                 </div>
@@ -109,7 +109,7 @@
                 <div class="card" style="background-color: #f8f9f0;">
                     <div class="box">
                         <img src="images/black_peel.jpg">
-                        <div class="text">Black Peel</div>
+                        <div class="text" style="color: black;">Black Peel</div>
                         <p style="color: black;">O Back Peel é a combinação de carvão ativado e laser. A máscara é um tipo especial de carvão. Esse processo mantém a porosidade destes materiais que são capazes de coletar seletivamente gases, líquidos ou impurezas tóxicas no interior de seus poros.</p>
                     </div>
                 </div>
@@ -128,36 +128,36 @@
         </div>
     </section>
 
-    <section class="teams" id="teams">
+    <section class="teams" id="teams" style="background-color: #d3b094;">
         <div class="max-width">
             <h2 class="title">Quem são nossos profissionais?</h2>
             <div class="carousel owl-carousel">
-                <div class="card" >
+                <div class="card" style="background-color: #f8f9f0" style="background-color: #f8f9f0;">
                     <div class="box">
                         <img src="images/eliabe.jpg">
-                        <div class="text">Dr. Eliabe Gai</div>
-                        <p>Formado na USFC (Universidade Federal de Santa Catarina), possui a especialização em Dermatologia. Utilizando as melhores tecnologias em aparelhos dermatológicos, estéticos, faciais e corporais visando sempre o aperfeiçoamento para melhor atendimento.</p>
+                        <div class="text" style="color: black;">Dr. Eliabe Gai</div>
+                        <p style="color: black;">Formado na USFC (Universidade Federal de Santa Catarina), possui a especialização em Dermatologia. Utilizando as melhores tecnologias em aparelhos dermatológicos, estéticos, faciais e corporais visando sempre o aperfeiçoamento para melhor atendimento.</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" style="background-color: #f8f9f0">
                     <div class="box">
                         <img src="images/gideane.jpg">
-                        <div class="text">Dra. Gideane Borges Gai</div>
-                        <p>É a nossa Fisioterapeuta,Formada em 2020/2, pós graduada em Ortopedia, Traumatologia e Esportiva pela Faculdade Inspirar e, formada em pilates solo e aparelhos, cursos focados em pilates, quiropraxia e massoterapia</p>
+                        <div class="text" style="color: black;">Dra. Gideane Borges Gai</div>
+                        <p style="color: black;">É a nossa Fisioterapeuta,Formada em 2020/2, pós graduada em Ortopedia, Traumatologia e Esportiva pela Faculdade Inspirar e, formada em pilates solo e aparelhos, cursos focados em pilates, quiropraxia e massoterapia</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" style="background-color: #f8f9f0">
                     <div class="box">
                         <img src="images/pamela.jfif">
-                        <div class="text">Pamela Menezes Pereira</div>
-                        <p>É a nossa Esteticista,Formada na UVV (Universidade de Vila Velha), capacitada para fazer avaliações e também para realizar as intervenções mais indicadas, desde limpeza de pele, drenagem linfática, depilação e massagem, até métodos avançados para suavizar linhas de expressão, promover hidratação, combater a queda de cabelos e reduzir estrias e celulites.</p>
+                        <div class="text" style="color: black;">Pamela Menezes Pereira</div>
+                        <p style="color: black;">É a nossa Esteticista,Formada na UVV (Universidade de Vila Velha), capacitada para fazer avaliações e também para realizar as intervenções mais indicadas, desde limpeza de pele, drenagem linfática, depilação e massagem, até métodos avançados para suavizar linhas de expressão, promover hidratação, combater a queda de cabelos e reduzir estrias e celulites.</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" style="background-color: #f8f9f0">
                     <div class="box">
                         <img src="images/yago.jpg">
-                        <div class="text">Yago Costa Ayala</div>
-                        <p>É o secretário da clínica, ele organiza o ambiente de trabalho, arquiva documentos, redige cartas, ofícios e comunicados. Participa de reuniões, palestras e conferências para registrar o que foi discutido e acordado. É responsável pelo primeiro atendimento dos clientes, presta informações e atende o telefone. </p>
+                        <div class="text" style="color: black;">Yago Costa Ayala</div>
+                        <p style="color: black;">É o secretário da clínica, ele organiza o ambiente de trabalho, arquiva documentos, redige cartas, ofícios e comunicados. Participa de reuniões, palestras e conferências para registrar o que foi discutido e acordado. É responsável pelo primeiro atendimento dos clientes, presta informações e atende o telefone. </p>
                     </div>
                 </div>
             </div>
@@ -181,7 +181,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">Labella@gmail.com</div>
+                                <div class="sub-title">Labelle@gmail.com</div>
                             </div>
                         </div>
                         <div class="row">
