fixed some errors

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">Sobre</a></li>
                 <li><a href="#services" class="menu-btn">Serviços</a></li>
-                <li><a href="#skills" class="menu-btn">Equipe</a></li>
-                <li><a href="#teams" class="menu-btn">Experiências</a></li>
+                <li><a href="#skills" class="menu-btn">Fluxograma</a></li>
+                <li><a href="#teams" class="menu-btn">Equipe</a></li>
                 <li><a href="#contact" class="menu-btn">Contato</a></li>
             </ul>
             <div class="menu-btn">
